Fix mobile header alignment

--- a/source/stylesheets/app/_index.css.scss
+++ b/source/stylesheets/app/_index.css.scss
@@ -50,6 +50,7 @@ section {
       @include span-columns(4);
       margin-bottom: 1rem;
       padding: 0 2rem;
+      text-align: left;
     }
   }
 
